configuracion pagina, kubernetes

--- a/apache.conf
+++ b/apache.conf
@@ -1,24 +1,25 @@
 <VirtualHost *:80>
     ServerName localhost
 
+    # Redirigir todas las peticiones al servidor Node.js
+    ProxyPreserveHost On
+    ProxyPass / http://localhost:4000/
+    ProxyPassReverse / http://localhost:4000/
+
+    # Configuración del DocumentRoot para archivos estáticos
     DocumentRoot /var/www/html
 
     <Directory /var/www/html>
-        Options -Indexes +FollowSymLinks
         AllowOverride All
         Require all granted
 
-        RewriteEngine On
-        RewriteBase /
-        RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteCond %{REQUEST_FILENAME} !-d
-        RewriteRule ^ /index.html [L]
-
+       # Encabezados de control de caché - 6 horas
         <IfModule mod_headers.c>
-            Header set Cache-Control "max-age=21600, public"
+           Header set Cache-Control "max-age=21600, public"
         </IfModule>
     </Directory>
 
+    # Registro de errores y acceso
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
