--- a/k8s/entornos/prod/kustomization.yaml
+++ b/k8s/entornos/prod/kustomization.yaml
@@ -1,7 +1,7 @@
 namespace: sorteos-live
 images:
   - name: 10.1.10.13:5000/sorteos-live
-    newName: 10.1.10.13:5000/prod/sorteos/sorteos-live
+    newName: 10.1.10.13:5000/prod/sorteos-live/sorteos-live
     newTag: v1.0.0
 resources:
   - ../../base
@@ -12,7 +12,7 @@ patches:
     patch: |-
       - op: replace
         path: /spec/tls/0/hosts/0
-        value: sorteos-live.coopetarrazu.com
+        value: sorteos-live.coopetarrazu.dev
       - op: replace
         path: /spec/rules/0/host
-        value: sorteos-live.coopetarrazu.com
+        value: sorteos-live.coopetarrazu.dev
