--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,7 +1,7 @@
 resources:
-#  - namespace.yaml
-#  - certificado-live.yaml
-#  - deploy.yaml
-#  - svc.yaml
-#  - proxy-svc.yaml
+  - namespace.yaml
+  - certificado-live.yaml
+  - deploy.yaml
+  - svc.yaml
+  - proxy-svc.yaml
   - ingress.yaml
